fix: navbar overflowing on mobile

--- a/src/components/CartItem/CartItem.module.css
+++ b/src/components/CartItem/CartItem.module.css
@@ -18,6 +18,7 @@
     grid-area: total;
     font-size: 1.1rem;
     font-weight: 600;
+    justify-self: flex-end;
 }
 
 .img {
