--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -21,4 +21,8 @@
         margin-left: var(--mobile-margin);
         margin-right: var(--mobile-margin);
     }
+
+    .title {
+        font-size: 1.7rem;
+    }
 }
